# marc-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  explanation_report.md  lefthook.yml  package-lock.json  package.json  pyproject.toml
app/: main.py
app/agents/: auditor_agent.py  base_agent.py  conflict_resolver.py  explainer_agent.py  performance_agent.py  security_agent.py  style_agent.py
app/core/: config.py  dependencies.py  logger.py
app/models/: report.py  requests.py
app/routers/: code_review.py
app/services/: code_review_service.py  orchestrator.py  report_service.py
app/utils/: file_parser.py  subprocess_runner.py
app/workflows/: code_review.py  code_review_workflow.py  state.py
tests/: test_api.py
